--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora Idade</title>
-  <link rel="stylesheet" href="/estilo/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="calculadora card">
@@ -14,7 +14,7 @@
     <button id="calcular">Calcular</button>
     <p id="resultado"></p>
   </div>
-  
+
   <script src="script.js"></script>
 </body>
 </html>
